force-app/main/default/objects/Package__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <formula>Location__r.Currency_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Code</label>
    <type>Text</type>
</CustomField>