force-app/main/default/objects/Package__c/fields/Deposit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Fee__c</fullName>
    <label>Deposit Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>