force-app/main/default/objects/Package__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Session duration in minutes (Trial will be 30 min)</inlineHelpText>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration</valueSetName>
    </valueSet>
</CustomField>