force-app/main/default/objects/Package__c/fields/Facility_Fee__c.field-meta.xml
<CustomField>
    <fullName>Facility_Fee__c</fullName>
    <label>Facility Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>