force-app/main/default/objects/Package__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>Grade for the use of Ossia</description>
    <label>Grade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introductory</fullName>
            </value>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Grade 1</fullName>
            </value>
            <value>
                <fullName>Grade 2</fullName>
            </value>
            <value>
                <fullName>Grade 3</fullName>
            </value>
            <value>
                <fullName>Grade 4</fullName>
            </value>
            <value>
                <fullName>Grade 5</fullName>
            </value>
            <value>
                <fullName>Grade 6</fullName>
            </value>
            <value>
                <fullName>Grade 7</fullName>
            </value>
            <value>
                <fullName>Grade 8</fullName>
            </value>
            <value>
                <fullName>PC/ARSM</fullName>
            </value>
            <value>
                <fullName>DipABRSM</fullName>
            </value>
            <value>
                <fullName>LTCL</fullName>
            </value>
            <value>
                <fullName>LRSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>