force-app/main/default/objects/Package__c/fields/Grade_New__c.field-meta.xml
<CustomField>
    <fullName>Grade_New__c</fullName>
    <label>Grade New</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade</valueSetName>
    </valueSet>
</CustomField>