force-app/main/default/objects/Package__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <formula>TEXT( Program__r.Instrument__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instrument</label>
    <type>Text</type>
</CustomField>