force-app/main/default/objects/Package__c/fields/Is_Promotion_Discount__c.field-meta.xml
<CustomField>
    <fullName>Is_Promotion_Discount__c</fullName>
    <formula>AND(
   NOT(ISBLANK(TEXT(Promotion_period_In_months__c))),
   Promotion_Discount__c &gt; 0,
   NOT(ISBLANK(Package_after_Promotion__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Promotion Discount</label>
    <type>Checkbox</type>
</CustomField>