force-app/main/default/objects/Package__c/fields/Location_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Location_Sharing__c</fullName>
    <description>Location using for sharing rule</description>
    <label>Location(Sharing)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locations</valueSetName>
    </valueSet>
</CustomField>