force-app/main/default/objects/Package__c/fields/Netsuite_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Product_ID__c</fullName>
    <label>Netsuite Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>