force-app/main/default/objects/Package__c/fields/of_Students__c.field-meta.xml
<CustomField>
    <fullName>of_Students__c</fullName>
    <inlineHelpText>Applicable for the Class (Group) lesson packages</inlineHelpText>
    <label># of Students</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>