force-app/main/default/objects/Package__c/fields/of_Units__c.field-meta.xml
<CustomField>
    <fullName>of_Units__c</fullName>
    <label># of Units</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>