force-app/main/default/objects/Package__c/fields/Offer_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_End_Date__c</fullName>
    <label>Offer End Date</label>
    <type>Date</type>
</CustomField>