force-app/main/default/objects/Package__c/fields/Package_after_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Package_after_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package after Promotion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Package__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Lesson</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>