force-app/main/default/objects/Package__c/fields/Package_Fee_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Package_Fee_with_GST__c</fullName>
    <formula>Package_Fee__c  +  Package_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Package Tax Amount</inlineHelpText>
    <label>Package Fee (with GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>