force-app/main/default/objects/Package__c/fields/Package_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Package_Tax_Amount__c</fullName>
    <formula>Package_Fee__c  *  Location__r.Country__r.Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Package &gt; Location &gt; Country: Tax Rate</inlineHelpText>
    <label>Package Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>