force-app/main/default/objects/Package__c/fields/Promotion_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Discount__c</fullName>
    <label>Promotion Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>