force-app/main/default/objects/Package__c/fields/Registration_Discount_Active__c.field-meta.xml
<CustomField>
    <fullName>Registration_Discount_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Discount Active</label>
    <type>Checkbox</type>
</CustomField>