force-app/main/default/objects/Package__c/fields/Registration_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Registration_Discount_Value__c</fullName>
    <label>Registration Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>