force-app/main/default/objects/Package__c/fields/Sage_Revenue_Template__c.field-meta.xml
<CustomField>
    <fullName>Sage_Revenue_Template__c</fullName>
    <label>Sage Revenue Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>