force-app/main/default/objects/Package__c/fields/Type_of_package__c.field-meta.xml
<CustomField>
    <fullName>Type_of_package__c</fullName>
    <label>Type of package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Promo</fullName>
            </value>
            <value>
                <fullName>Prepayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>