force-app/main/default/objects/Package__c/fields/Unit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Unit_Fee__c</fullName>
    <inlineHelpText>One session fee</inlineHelpText>
    <label>Unit Fee</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>