force-app/main/default/objects/Package__c/recordTypes/Facility.recordType-meta.xml
<RecordType>
    <fullName>Facility</fullName>
    <active>true</active>
    <description>Select this record type to setup package for Facility Rental</description>
    <label>Facility</label>
</RecordType>