force-app/main/default/objects/Package__c/recordTypes/Item.recordType-meta.xml
<RecordType>
    <fullName>Item</fullName>
    <active>true</active>
    <description>Select this record type to setup package for Item Rental/Sell</description>
    <label>Item</label>
</RecordType>