force-app/main/default/objects/Package__c/recordTypes/Lesson.recordType-meta.xml
<RecordType>
    <fullName>Lesson</fullName>
    <active>true</active>
    <description>Select this record type to setup package for music lesson</description>
    <label>Lesson</label>
</RecordType>