force-app/main/default/objects/Package__c/validationRules/Long_term_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Long_term_Discount</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Text(Promotion_period_In_months__c ))||ISBlank( Package_after_Promotion__c )||ISNULL( Promotion_Discount__c )</errorConditionFormula>
    <errorMessage>Required field cannot be empty</errorMessage>
</ValidationRule>