force-app/main/default/objects/Package__c/validationRules/RegistrationDiscountActive.validationRule-meta.xml
<ValidationRule>
    <fullName>RegistrationDiscountActive</fullName>
    <active>true</active>
    <description>If registration discount is active then Registration Discount Value not be 0.</description>
    <errorConditionFormula>AND((Registration_Discount_Active__c = TRUE),ISNULL( Registration_Discount_Value__c ))</errorConditionFormula>
    <errorMessage>Discount value cant be Null</errorMessage>
</ValidationRule>