force-app/main/default/objects/Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Location__c</columns>
    <columns>Registration_Fee__c</columns>
    <columns>of_Units__c</columns>
    <columns>of_Students__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Currency_Code__c</field>
        <operation>equals</operation>
        <value>HKD</value>
    </filters>
    <label>All</label>
</ListView>