force-app/main/default/objects/Package__c/listViews/All_Group_Packages.listView-meta.xml
<ListView>
    <fullName>All_Group_Packages</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>of_Units__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Group</value>
    </filters>
    <label>All Group Packages</label>
</ListView>