force-app/main/default/objects/Package__c/listViews/All_Makeup_Lesson.listView-meta.xml
<ListView>
    <fullName>All_Makeup_Lesson</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>of_Units__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Makeup Lesson</value>
    </filters>
    <label>All Makeup Lesson</label>
</ListView>